Switching to temurin LTS JDKs (#564)
* Switching to temurin LTS JDKs and added JDK 24 to the mix